tests/ui/not-a-function.stderr
error: expected `fn`
 --> tests/ui/not-a-function.rs:4:1
  |
4 | struct NotAFunction;
  | ^^^^^^
