tests/ui/not-a-function.rs
fn main() {}

#[wrap_match::wrap_match]
struct NotAFunction;
